feat: our services (50%)

--- a/Service/index.html
+++ b/Service/index.html
@@ -32,8 +32,10 @@
             <li class="menu-item"><a href="">Contact us</a></li>
         </ul>
     </div>
+    <div class="menu-bar-icon">
+        <img src="./image/Menubaricon.svg"></div>
+    </div>
 </header>
-<div>
     <div class="container">
         <div class="banner-top">
             <div class="banner-left">
@@ -68,100 +70,33 @@
                 </div>
             </div>
         </div>
-        <div class="services">
-            <div class="services-header">
-                <h2>Our services</h2>
-            </div>
-            <div class="services-content">
-                <div class="services-item-left">
-                    <div class="services-item">
-                        <div class="services-web-design">
-                            <div class="services-web-design-image">
-                                <img src="./image/RulerCrossPen.svg"/>
-                                <span>Web design</span>
-                            </div>
-                            <div class= "services-web-design-CTA">
-                                <img src="./image/Vector 431.svg"/>
-                                <span>BOOK A CALL</span>
-                            </div>
-                        </div>
-                        <div>
-                            Our Web Design service is all about creating visually stunning and user-friendly websites that leave a lasting.
-                        </div>
-                        <div>
-                            Starts From $1,500
-                        </div>
-                    </div>
-                    <div class="services-item">
-                        <div class="services-web-design">
-                            <div class="services-web-design-image">
-                                <img src="./image/RulerCrossPen.svg"/>
-                                <span>Web design</span>
-                            </div>
-                            <div class= "services-web-design-CTA">
-                                <img src="./image/Vector 431.svg"/>
-                                <span>BOOK A CALL</span>
-                            </div>
-                        </div>
-                        <div>
-                            Our Web Design service is all about creating visually stunning and user-friendly websites that leave a lasting.
-                        </div>
-                        <div>
-                            Starts From $1,500
-                        </div>
-                    </div>
-                    <div class="services-item">
-                    <div class="services-web-design">
-                        <div class="services-web-design-image">
+    </div>
+    <div class="Services container">
+        <div class="section-header">
+            <h2>
+                Our Services
+            </h2>
+        </div>
+        <div class="services-content">
+            <div class="services-left">
+                <div class="services-header">
+                    <div class="services-left-header">
+                        <div class="services-left-icon">
                             <img src="./image/RulerCrossPen.svg"/>
-                            <span>Web design</span>
                         </div>
-                        <div class= "services-web-design-CTA">
+                        <span>Web Design</span>
+                    </div>
+                    <div class="services-right-header">
+                        <div class="services-right-icon">
                             <img src="./image/Vector 431.svg"/>
-                            <span>BOOK A CALL</span>
                         </div>
-                    </div>
-                    <div>
-                        Our Web Design service is all about creating visually stunning and user-friendly websites that leave a lasting.
-                    </div>
-                    <div>
-                        Starts From $1,500
+                        <span>Book a call</span>
                     </div>
                 </div>
-                    <div class="services-item">
-                        <div class="services-web-design">
-                            <div class="services-web-design-image">
-                                <img src="./image/RulerCrossPen.svg"/>
-                                <span>Web design</span>
-                            </div>
-                            <div class= "services-web-design-CTA">
-                                <img src="./image/Vector 431.svg"/>
-                                <span>BOOK A CALL</span>
-                            </div>
-                        </div>
-                        <div>
-                            Our Web Design service is all about creating visually stunning and user-friendly websites that leave a lasting.
-                        </div>
-                        <div>
-                            Starts From $1,500
-                        </div>
-                    </div>
-                </div>
-                <div class="services-item-right">
-                    <div class="services-item-right-sub">
-                            <div class="services-item-right-sub1">Web Design Projects</div>
-                            <div>
-                                <div class="services-item-right-sub1-text">
-                                    <img src="./image/Vector 431.svg"/>
-                                    <span>View all</span>
-                                </div>
-                            </div>
-                        </div>
-                    <div class="services-item-right-sub">Mobile app development projects</div>
-                    <div class="services-item-right-sub">Web development projects</div>
-                    <div class="services-item-right-sub">Digital marketing projects</div>
-                </div>
+                    <p class="services-left-description">Our Web Design service is all about creating visually stunning and user-friendly websites that leave a lasting.</p>
+                    <p class="services-left-price">Starts From $1,500</p>
             </div>
+            <div class="services-right"></div>
         </div>
     </div>
 </body>
