feat: our services (50%)

--- a/Service/index.html
+++ b/Service/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href=./css/header.css>
     <link rel="stylesheet" href=./css/banner.css>
     <link rel="stylesheet" href=./css/services.css>
+    <link rel="stylesheet" href=./css/success.css>
 </head>
 <body>
 <header class="header container">
@@ -60,9 +61,9 @@
             </div>
             <div class="banner-right">
                 <div class="banner-image">
-                    <div class="banner-vector">
+                    <div class="vector">
                         <div class="vector431"><img src="./image/Vector 431.svg"/></div>
-                        <span class="banner-right-text">View Blog</span>
+                        <span class="vector-text">View Blog</span>
                     </div>
                     <div class="banner-right-btn">
                         Web development.
@@ -78,26 +79,249 @@
             </h2>
         </div>
         <div class="services-content">
-            <div class="services-left">
-                <div class="services-header">
-                    <div class="services-left-header">
-                        <div class="services-left-icon">
-                            <img src="./image/RulerCrossPen.svg"/>
+            <div class="services-content-item">
+                <div class="services-left">
+                    <div class="services-header">
+                        <div class="services-left-header">
+                            <div class="services-left-icon">
+                                <img src="./image/RulerCrossPen.svg"/>
+                            </div>
+                            <span class="services-left-text">Web Design</span>
                         </div>
-                        <span>Web Design</span>
-                    </div>
-                    <div class="services-right-header">
-                        <div class="services-right-icon">
-                            <img src="./image/Vector 431.svg"/>
+                        <div class="wrapper-right-header-icon">
+                            <div class="arrow-top-right-icon">
+                                <img src="./image/Vectororange.svg"/>
+                            </div>
+                            <span class="text-aside-arrow">Book a call</span>
                         </div>
-                        <span>Book a call</span>
                     </div>
-                </div>
                     <p class="services-left-description">Our Web Design service is all about creating visually stunning and user-friendly websites that leave a lasting.</p>
                     <p class="services-left-price">Starts From $1,500</p>
+                </div>
+                <div class="services-right">
+                    <div class="services-right-header">
+                        <p class="services-right-text">Web Design Projects</p>
+                        <div class="wrapper-right-header-icon">
+                            <div class="arrow-top-right-icon arrow-top-right-icon-big">
+                                <img src="./image/Vectororange.svg"/>
+                            </div>
+                            <span class="text-aside-arrow">View all</span>
+                        </div>
+                    </div>
+                    <div class="services-right-content">
+                        <div class="services-right-content-img">
+                            <img src="./image/service1.png"/>
+                            <div class="vector">
+                                <div class="vector431"><img src="./image/Vector 431.svg"/></div>
+                                <span class="vector-text">Open Project</span>
+                            </div>
+                        </div>
+                        <div class="services-right-content-img">
+                            <img src="./image/service2.png"/>
+                            <div class="vector">
+                                <div class="vector431"><img src="./image/Vector 431.svg"/></div>
+                                <span class="vector-text">Open Project</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="services-right"></div>
+            <div class="services-content-item">
+                <div class="services-left">
+                    <div class="services-header">
+                        <div class="services-left-header">
+                            <div class="services-left-icon">
+                                <img src="./image/Smartphone 2.svg"/>
+                            </div>
+                            <span class="services-left-text">Mobile App Development</span>
+                        </div>
+                        <div class="wrapper-right-header-icon">
+                            <div class="arrow-top-right-icon">
+                                <img src="./image/Vectororange.svg"/>
+                            </div>
+                            <span class="text-aside-arrow">Book a call</span>
+                        </div>
+                    </div>
+                    <p class="services-left-description">With our Mobile App Development service, we harness the power of mobile technology to create cutting-edge applications that engage your customers on-the-go.</p>
+                    <p class="services-left-price">Starts From $2,500</p>
+                </div>
+                <div class="services-right">
+                    <div class="services-right-header">
+                        <p class="services-right-text">Mobile App Development Projects</p>
+                        <div class="wrapper-right-header-icon">
+                            <div class="arrow-top-right-icon arrow-top-right-icon-big">
+                                <img src="./image/Vectororange.svg"/>
+                            </div>
+                            <span class="text-aside-arrow">View all</span>
+                        </div>
+                    </div>
+                    <div class="services-right-content">
+                        <div class="services-right-content-img">
+                            <img src="./image/service3.png"/>
+                            <div class="vector">
+                                <div class="vector431"><img src="./image/Vector 431.svg"/></div>
+                                <span class="vector-text">Open Project</span>
+                            </div>
+                        </div>
+                        <div class="services-right-content-img">
+                            <img src="./image/service4.png"/>
+                            <div class="vector">
+                                <div class="vector431"><img src="./image/Vector 431.svg"/></div>
+                                <span class="vector-text">Open Project</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="services-content-item">
+                <div class="services-left">
+                    <div class="services-header">
+                        <div class="services-left-header">
+                            <div class="services-left-icon">
+                                <img src="./image/Vector development.svg"/>
+                            </div>
+                            <span class="services-left-text">Web Development</span>
+                        </div>
+                        <div class="wrapper-right-header-icon">
+                            <div class="arrow-top-right-icon">
+                                <img src="./image/Vectororange.svg"/>
+                            </div>
+                            <span class="text-aside-arrow">Book a call</span>
+                        </div>
+                    </div>
+                    <p class="services-left-description">Our Web Development service is focused on turning your website into a powerful digital asset. We utilize the latest technologies and industry best practices to build websites.</p>
+                    <p class="services-left-price">Starts From $1,800</p>
+                </div>
+                <div class="services-right">
+                    <div class="services-right-header">
+                        <p class="services-right-text">Web Development Projects</p>
+                        <div class="wrapper-right-header-icon">
+                            <div class="arrow-top-right-icon arrow-top-right-icon-big">
+                                <img src="./image/Vectororange.svg"/>
+                            </div>
+                            <span class="text-aside-arrow">View all</span>
+                        </div>
+                    </div>
+                    <div class="services-right-content">
+                        <div class="services-right-content-img">
+                            <img src="./image/service5.png"/>
+                            <div class="vector">
+                                <div class="vector431"><img src="./image/Vector 431.svg"/></div>
+                                <span class="vector-text">Open Project</span>
+                            </div>
+                        </div>
+                        <div class="services-right-content-img">
+                            <img src="./image/service6.png"/>
+                            <div class="vector">
+                                <div class="vector431"><img src="./image/Vector 431.svg"/></div>
+                                <span class="vector-text">Open Project</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="services-content-item">
+                <div class="services-left">
+                    <div class="services-header">
+                        <div class="services-left-header">
+                            <div class="services-left-icon">
+                                <img src="./image/Vector digital.svg"/>
+                            </div>
+                            <span class="services-left-text">Digital Marketing</span>
+                        </div>
+                        <div class="wrapper-right-header-icon">
+                            <div class="arrow-top-right-icon">
+                                <img src="./image/Vectororange.svg"/>
+                            </div>
+                            <span class="text-aside-arrow">Book a call</span>
+                        </div>
+                    </div>
+                    <p class="services-left-description">In the digital age, marketing is a critical aspect of your business's success. Our Digital Marketing service employs data-driven strategies to enhance your brand's visibility</p>
+                    <p class="services-left-price">Starts From $1,200</p>
+                </div>
+                <div class="services-right">
+                    <div class="services-right-header">
+                        <p class="services-right-text">Digital Marketing Projects</p>
+                        <div class="wrapper-right-header-icon">
+                            <div class="arrow-top-right-icon arrow-top-right-icon-big">
+                                <img src="./image/Vectororange.svg"/>
+                            </div>
+                            <span class="text-aside-arrow">View all</span>
+                        </div>
+                    </div>
+                    <div class="services-right-content">
+                        <div class="services-right-content-img">
+                            <img src="./image/service7.png"/>
+                            <div class="vector">
+                                <div class="vector431"><img src="./image/Vector 431.svg"/></div>
+                                <span class="vector-text">Open Project</span>
+                            </div>
+                        </div>
+                        <div class="services-right-content-img">
+                            <img src="./image/service8.png"/>
+                            <div class="vector">
+                                <div class="vector431"><img src="./image/Vector 431.svg"/></div>
+                                <span class="vector-text">Open Project</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+<div class="section-header container">
+    <h2>
+        Success Stories
+    </h2>
+    <div class="wrapper-right-header-icon">
+        <div class="arrow-top-right-icon arrow-top-right-icon-big">
+            <img src="./image/Vectororange.svg"/>
+        </div>
+        <span class="text-aside-arrow">View all</span>
+    </div>
+</div>
+<div class="success-content container">
+    <div class="success-content-item">
+        <div class="success-content-item-left">
+            <div class="success-header">
+                <div class="success-left-header">
+                    <div class="success-left-icon">
+                        <img src="./image/Ghost Smile.svg"/>
+                    </div>
+                    <span class="success-left-text">Klothink</span>
+                </div>
+                <div class="wrapper-right-header-icon">
+                    <div class="arrow-top-right-icon arrow-top-right-icon-big">
+                        <img src="./image/Vectororange.svg"/>
+                    </div>
+                    <span class="text-aside-arrow">Visit website</span>
+                </div>
+            </div>
+            <div class="success-meta">
+                <div class="success-meta-tag">
+                    <span>Industry</span>
+                    <span class="dot">&#9679;</span>
+                    <span>E-commerce</span>
+                </div>
+                <div class="success-meta-tag">
+                    <span>Service Utilized</span>
+                    <span class="dot">&#9679;</span>
+                    <span>Design & Development</span>
+                </div>
+            </div>
+        </div>
+        <div class="success-content-item-right">
+            <div class="success-right-header">
+                <div>Challenge</div>
+                <div>Solution</div>
+                <div>Results</div>
+            </div>
+            <div class="success-right-content">
+                <p class="success-right-content-title">Solution</p>
+                <p class="success-right-content-description">Our team conducted a thorough analysis of their target audience and business objectives. We designed a modern and intuitive website with seamless navigation and a mobile-responsive layout. Additionally, we integrated an efficient checkout process and optimized the site for search engines.</p>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
