--- a/Service/index.html
+++ b/Service/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href=./css/banner.css>
     <link rel="stylesheet" href=./css/services.css>
     <link rel="stylesheet" href=./css/success.css>
+    <link rel="stylesheet" href=./css/testimonials.css>
+    <link rel="stylesheet" href=./css/faq.css>
 </head>
 <body>
 <header class="header container">
@@ -312,13 +314,171 @@
         </div>
         <div class="success-content-item-right">
             <div class="success-right-header">
-                <div>Challenge</div>
-                <div>Solution</div>
-                <div>Results</div>
+                <div class="success-right-header-btn">Challenge</div>
+                <div class="success-right-header-btn">Solution</div>
+                <div class="success-right-header-btn">Results</div>
             </div>
             <div class="success-right-content">
                 <p class="success-right-content-title">Solution</p>
                 <p class="success-right-content-description">Our team conducted a thorough analysis of their target audience and business objectives. We designed a modern and intuitive website with seamless navigation and a mobile-responsive layout. Additionally, we integrated an efficient checkout process and optimized the site for search engines.</p>
+            </div>
+        </div>
+    </div>
+    <div class="success-content-item">
+        <div class="success-content-item-left">
+            <div class="success-header">
+                <div class="success-left-header">
+                    <div class="success-left-icon">
+                        <img src="./image/Hand Heart.svg"/>
+                    </div>
+                    <span class="success-left-text">Fitness Tracker App</span>
+                </div>
+                <div class="wrapper-right-header-icon">
+                    <div class="arrow-top-right-icon arrow-top-right-icon-big">
+                        <img src="./image/Vectororange.svg"/>
+                    </div>
+                    <span class="text-aside-arrow">Visit website</span>
+                </div>
+            </div>
+            <div class="success-meta">
+                <div class="success-meta-tag">
+                    <span>Industry</span>
+                    <span class="dot">&#9679;</span>
+                    <span>Health & Fitness</span>
+                </div>
+                <div class="success-meta-tag">
+                    <span>Service Utilized</span>
+                    <span class="dot">&#9679;</span>
+                    <span>Mobile App Development</span>
+                </div>
+            </div>
+        </div>
+        <div class="success-content-item-right">
+            <div class="success-right-header">
+                <div class="success-right-header-btn">Challenge</div>
+                <div class="success-right-header-btn">Solution</div>
+                <div class="success-right-header-btn">Results</div>
+            </div>
+            <div class="success-right-content">
+                <p class="success-right-content-title">Solution</p>
+                <p class="success-right-content-description">Leveraging our expertise in app development, we built an interactive mobile app with user-friendly features. The app allowed users to set personalized fitness goals, track their progress, and share achievements on social media platforms. Real-time data synchronization enabled users to access their data on multiple devices.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="testimonials container">
+    <div class="section-header">
+        <h2>
+            Testimonials
+        </h2>
+        <div class="wrapper-right-header-icon">
+            <div class="arrow-top-right-icon arrow-top-right-icon-big">
+                <img src="./image/Vectororange.svg"/>
+            </div>
+            <span class="text-aside-arrow">ALL Testimonials</span>
+        </div>
+    </div>
+    <div class="testimonials-content">
+        <div class="testimonials-content-item">
+            <div class="testimonials-content-item-header">
+                <h2>NexGen turned our business around!</h2>
+                <p>Their digital marketing strategies helped us reach new customers and increase our revenue by 30% within just a few months. Highly recommended!</p>
+            </div>
+            <div class="testimonials-content-item-footer">
+                <div class="testimonials-content-item-footer-author">
+                    <img src="./image/testimonials1.svg"/>
+                    <div class="testimonials-content-item-footer-author-name">
+                        <p>Sarah Thompson</p>
+                        <p>CEO of BlueBloom</p>
+                    </div>
+                </div>
+                <div class="testimonials-content-item-img">
+                    <img src="./image/arrow-right.svg"/>
+                </div>
+            </div>
+        </div>
+        <div class="testimonials-content-item">
+            <div class="testimonials-content-item-header">
+                <h2>NexGen turned our business around!</h2>
+                <p>Their digital marketing strategies helped us reach new customers and increase our revenue by 30% within just a few months. Highly recommended!</p>
+            </div>
+            <div class="testimonials-content-item-footer">
+                <div class="testimonials-content-item-footer-author">
+                    <img src="./image/testimonials2.svg"/>
+                    <div class="testimonials-content-item-footer-author-name">
+                        <p>Wade Warren</p>
+                        <p>Art Director</p>
+                    </div>
+                </div>
+                <div class="testimonials-content-item-img">
+                    <img src="./image/arrow-right.svg"/>
+                </div>
+            </div>
+        </div>
+        <div class="testimonials-content-item">
+            <div class="testimonials-content-item-header">
+                <h2>Working with NexGen was a pleasure.</h2>
+                <p>Their web design team created a stunning website that perfectly captured our brand's essence. The feedback from our customers has been overwhelmingly positive.</p>
+            </div>
+            <div class="testimonials-content-item-footer">
+                <div class="testimonials-content-item-footer-author">
+                    <img src="./image/testimonials3.svg"/>
+                    <div class="testimonials-content-item-footer-author-name">
+                        <p>Lisa Williams</p>
+                        <p>CEO Of HealthTech</p>
+                    </div>
+                </div>
+                <div class="testimonials-content-item-img">
+                    <img src="./image/arrow-right.svg"/>
+                </div>
+            </div>
+        </div>
+        <div class="testimonials-content-item">
+            <div class="testimonials-content-item-header">
+                <h2>NexGen's web design team brought our vision to life.</h2>
+                <p>Their responsive design ensures our website looks stunning on all devices, contributing to increased user engagement.</p>
+            </div>
+            <div class="testimonials-content-item-footer">
+                <div class="testimonials-content-item-footer-author">
+                    <img src="./image/testimonials4.svg"/>
+                    <div class="testimonials-content-item-footer-author-name">
+                        <p>Jennifer Lee</p>
+                        <p>COO of Foodie Haven</p>
+                    </div>
+                </div>
+                <div class="testimonials-content-item-img">
+                    <img src="./image/arrow-right.svg"/>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="section-header container">
+        <h2>
+            Frequently Asked Questions
+        </h2>
+        <div class="wrapper-right-header-icon">
+            <div class="arrow-top-right-icon arrow-top-right-icon-big">
+                <img src="./image/Vectororange.svg"/>
+            </div>
+            <span class="text-aside-arrow">View all</span>
+        </div>
+    </div>
+<div class="faq container">
+
+
+    <div class="faq-list">
+        <div class="faq-item">
+            <div class="faq-item-text">
+                <div class="faq-item-question">
+                    <p>How long does it take to complete a web development project?</p>
+                </div>
+                <div class="faq-item-answer">
+                    <p>The timeline varies depending on the project's complexity and requirements. Our team strives to deliver projects on time while maintaining the highest quality standards.</p>
+                </div>
+            </div>
+            <div class="faq-icon">
+                <img src="./image/plus.svg"/>
             </div>
         </div>
     </div>
